objects/KPI__c.object
<CustomObject>
    <description>SFC-2499</description>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{0000}</displayFormat>
        <label>KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Date__c</fullName>
        <description>SFC-2499</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFC-2499</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI&apos;s</relationshipLabel>
        <relationshipName>KPI_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>SFC-2499</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Umsatz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_AA__c</fullName>
        <description>SFC-2499</description>
        <label>Value ÄÄ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_PK__c</fullName>
        <description>SFC-2499</description>
        <label>Value PK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>